// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Popconfirm rtl render component should be rendered correctly in RTL direction 1`] = `<span />`;

exports[`Popconfirm should show overlay when trigger is clicked 1`] = `
<div
  class="g-popover g-popover-css-var css-var-root css-var-root g-popconfirm g-popover-placement-top"
  style="--arrow-x: 0px; --arrow-y: 6px; left: 0px; top: auto; right: auto; bottom: 12px; box-sizing: border-box;"
>
  <div
    class="g-popover-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  >
    <span
      class="g-popover-arrow-content"
    />
  </div>
  <div
    class="g-popover-container"
    id="test-id"
    role="tooltip"
  >
    <div
      class="g-popover-content"
    >
      <div
        class="g-popconfirm-inner-content"
      >
        <div
          class="g-popconfirm-message"
        >
          <span
            class="g-popconfirm-message-icon"
          >
            <span
              aria-label="exclamation-circle"
              class="gicon gicon-exclamation-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                />
              </svg>
            </span>
          </span>
          <div
            class="g-popconfirm-message-text"
          >
            <div
              class="g-popconfirm-title"
            >
              code
            </div>
          </div>
        </div>
        <div
          class="g-popconfirm-buttons"
        >
          <button
            class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
            type="button"
          >
            <span>
              OK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popconfirm shows content for render functions 1`] = `
<div
  class="g-popover g-popover-css-var css-var-root css-var-root g-popconfirm g-popover-placement-bottom"
  style="--arrow-x: 0px; --arrow-y: -6px; left: 0px; top: 12px; right: auto; bottom: auto; box-sizing: border-box;"
>
  <div
    class="g-popover-arrow"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <span
      class="g-popover-arrow-content"
    />
  </div>
  <div
    class="g-popover-container"
    id="test-id"
    role="tooltip"
  >
    <div
      class="g-popover-content"
    >
      <div
        class="g-popconfirm-inner-content"
      >
        <div
          class="g-popconfirm-message"
        >
          <span
            class="g-popconfirm-message-icon"
          >
            <span
              aria-label="exclamation-circle"
              class="gicon gicon-exclamation-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                />
              </svg>
            </span>
          </span>
          <div
            class="g-popconfirm-message-text"
          >
            <div
              class="g-popconfirm-title"
            >
              some-title
            </div>
          </div>
        </div>
        <div
          class="g-popconfirm-buttons"
        >
          <button
            class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
            type="button"
          >
            <span>
              OK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
